<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>BestOF_Java9-13</groupId>
	<artifactId>BestOF_Java9-13</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>13</source>
					<target>13</target>
					<!-- - Wichtig für Java 12 Syntax-Neuerungen -->
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>			
		</plugins>
	</build>
</project>